--- a/locale/ca/LC_MESSAGES/django.po
+++ b/locale/ca/LC_MESSAGES/django.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: Tigatrapp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-30 16:14+0200\n"
-"PO-Revision-Date: 2015-01-12 15:46+0000\n"
-"Last-Translator: John Palmer\n"
+"PO-Revision-Date: 2015-07-01 23:47+0100\n"
+"Last-Translator: John Palmer <johnrbpalmer@gmail.com>\n"
 "Language-Team: John Palmer\n"
 "Language: Catalan (Spain)\n"
 "MIME-Version: 1.0\n"
@@ -91,11 +91,11 @@ msgstr "Tigaserver administration"
 #: tigacrafting/templates/tigacrafting/expert_validation.html:88
 #: tigacrafting/templates/tigacrafting/movelab_validation.html:88
 msgid "Toggle navigation"
-msgstr ""
+msgstr "Alternar panell de navegació"
 
 #: tigacrafting/templates/tigacrafting/expert_report_annotation.html:156
 msgid "Reports per page"
-msgstr ""
+msgstr "Informes per pàgina"
 
 #: tigacrafting/templates/tigacrafting/expert_report_annotation.html:386
 #: tigacrafting/templates/tigacrafting/expert_report_annotation.html:401
@@ -108,11 +108,11 @@ msgstr ""
 #: tigacrafting/templates/tigacrafting/superexpert_report_annotation.html:108
 #: tigacrafting/templates/tigacrafting/superexpert_report_annotation.html:121
 msgid "All"
-msgstr ""
+msgstr "Tots"
 
 #: tigacrafting/templates/tigacrafting/expert_validation.html:98
 msgid "Menu"
-msgstr ""
+msgstr "Menú"
 
 #: tigacrafting/templates/tigacrafting/expert_validation.html:101
 msgid "New batch"
@@ -129,7 +129,7 @@ msgstr ""
 #: tigacrafting/templates/tigacrafting/expert_validation.html:171
 #: tigacrafting/templates/tigacrafting/movelab_validation.html:195
 msgid "Save"
-msgstr ""
+msgstr "Guardar"
 
 #: tigacrafting/templates/tigacrafting/movelab_validation.html:103
 msgid "Photos per page"
@@ -153,7 +153,8 @@ msgstr "Acord de l'usuari"
 msgid "privacy-policy"
 msgstr "Política de privacitat"
 
-#: tigamap/views.py:145 tigamap/views.py:316
+#: tigamap/views.py:145
+#: tigamap/views.py:316
 msgid "coverage-map"
 msgstr "Zones explorades"
 
@@ -174,7 +175,9 @@ msgstr "Mosquits tigre: Només probabilitat mitjana i alta"
 msgid "adult-tiger-mosquitoes-high-probability-reports"
 msgstr "Mosquits tigre: Només probabilitat alta"
 
-#: tigamap/views.py:181 tigamap/views.py:212 tigamap/views.py:258
+#: tigamap/views.py:181
+#: tigamap/views.py:212
+#: tigamap/views.py:258
 msgid "adult-tiger-mosquitoes-all-reports"
 msgstr "Informes de mosquits: Tots"
 
@@ -183,37 +186,46 @@ msgstr "Informes de mosquits: Tots"
 msgid "Breeding Sites: Validated reports"
 msgstr "Llocs de cria: Tots"
 
-#: tigamap/views.py:197 tigamap/views.py:285
+#: tigamap/views.py:197
+#: tigamap/views.py:285
 msgid "breeding-sites-storm-drains-and-fountains"
 msgstr "Llocs de cria: Embornals i fonts"
 
-#: tigamap/views.py:200 tigamap/views.py:285
+#: tigamap/views.py:200
+#: tigamap/views.py:285
 msgid "breeding-sites-basins"
 msgstr "Llocs de cria: Basses artificials petites"
 
-#: tigamap/views.py:203 tigamap/views.py:285
+#: tigamap/views.py:203
+#: tigamap/views.py:285
 msgid "breeding-sites-buckets-and-wells"
 msgstr "Llocs de cria: Bidons i pous"
 
-#: tigamap/views.py:206 tigamap/views.py:285
+#: tigamap/views.py:206
+#: tigamap/views.py:285
 msgid "breeding-sites-other"
 msgstr "Llocs de cria: Altres"
 
-#: tigamap/views.py:209 tigamap/views.py:285 tigamap/views.py:289
+#: tigamap/views.py:209
+#: tigamap/views.py:285
+#: tigamap/views.py:289
 msgid "breeding-sites-all-reports"
 msgstr "Llocs de cria: Tots"
 
-#: tigamap/views.py:254 tigamap/views.py:256
+#: tigamap/views.py:254
+#: tigamap/views.py:256
 #: tigamap/templates/tigamap/app.html:122
 #: tigamap/templates/tigamap/app_new.html:171
 msgid "adult-tiger-mosquitoes"
 msgstr "Informes de mosquits"
 
-#: tigamap/views.py:254 tigamap/templates/tigamap/app_new.html:177
+#: tigamap/views.py:254
+#: tigamap/templates/tigamap/app_new.html:177
 msgid "menu_adults_prob"
 msgstr "Mosquits tigre confirmats i possibles"
 
-#: tigamap/views.py:256 tigamap/templates/tigamap/app_new.html:179
+#: tigamap/views.py:256
+#: tigamap/templates/tigamap/app_new.html:179
 msgid "menu_adults_definite"
 msgstr "Mosquits tigre confirmats"
 
@@ -222,10 +234,7 @@ msgstr "Mosquits tigre confirmats"
 #: tigamap/templates/tigamap/app_new.html:85
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:167
 msgid "our-website-uses-cookies"
-msgstr ""
-"El nostre lloc web utilitza galetes (cookies). Si continues navegant assumim "
-"el teu permís per utilitzar galetes. Per a més informació sobre les "
-"polítiques del nostre lloc web, si us plau consulta la nostra"
+msgstr "El nostre lloc web utilitza galetes (cookies). Si continues navegant assumim el teu permís per utilitzar galetes. Per a més informació sobre les polítiques del nostre lloc web, si us plau consulta la nostra"
 
 #: tigamap/templates/tigamap/app.html:27
 #: tigamap/templates/tigamap/app_filtered.html:102
@@ -295,7 +304,7 @@ msgstr "http://atrapaeltigre.com/web/ca/el-mapa-del-mosquit-tigre-2014/"
 #: tigamap/templates/tigamap/app_new.html:159
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:630
 msgid "navbar_toggle_navigation"
-msgstr ""
+msgstr "Alternar panell de navegació"
 
 #: tigamap/templates/tigamap/app_filtered.html:195
 #: tigamap/templates/tigamap/app_new.html:203
@@ -324,12 +333,12 @@ msgstr ""
 #: tigamap/templates/tigamap/coverage_map_new.html:221
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:411
 msgid "fixes"
-msgstr ""
+msgstr "observacions"
 
 #: tigamap/templates/tigamap/coverage_map_new.html:223
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:413
 msgid "fix"
-msgstr ""
+msgstr "observacion"
 
 #: tigamap/templates/tigamap/coverage_map_new.html:336
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:774
@@ -344,14 +353,7 @@ msgstr "Zones explorades"
 #: tigamap/templates/tigamap/coverage_map_new.html:373
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:812
 msgid "coverage_legend_info_blurb"
-msgstr ""
-"<p>La versi&oacute; Android de Tigatrapp recull en background (si l&rsquo;"
-"usuari ho permet), 5 dades de posici&oacute; al dia. Nom&eacute;s es recull "
-"la posici&oacute; aproximada (requadres vermells del mapa) per preservar "
-"l&rsquo;anonimat dels participants.<br /><br />El nombre d&rsquo;"
-"observacions en un determinat requadre &eacute;s el nombre acumulat de dades "
-"de posici&oacute; recollides en aquell requadre de tots els participants. "
-"Com m&eacute;s fosc el color, m&eacute;s explorada ha estat aquella zona.</p>"
+msgstr "<p>La versi&oacute; Android de Tigatrapp recull en background (si l&rsquo;usuari ho permet), 5 dades de posici&oacute; al dia. Nom&eacute;s es recull la posici&oacute; aproximada (requadres vermells del mapa) per preservar l&rsquo;anonimat dels participants.<br /><br />El nombre d&rsquo;observacions en un determinat requadre &eacute;s el nombre acumulat de dades de posici&oacute; recollides en aquell requadre de tots els participants. Com m&eacute;s fosc el color, m&eacute;s explorada ha estat aquella zona.</p>"
 
 #: tigamap/templates/tigamap/coverage_map_new.html:377
 #: tigamap/templates/tigamap/validated_report_map.html:629
@@ -480,9 +482,7 @@ msgstr "No se sap"
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:336
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:904
 msgid "expert_row_title"
-msgstr ""
-"<a href=\"http://atrapaeltigre.com/web/ca/el-mapa-del-mosquit-tigre-2014/\" "
-"target=\"_blank\">Experts</a>"
+msgstr "<a href=\"http://atrapaeltigre.com/web/ca/el-mapa-del-mosquit-tigre-2014/\" target=\"_blank\">Experts</a>"
 
 #: tigamap/templates/tigamap/validated_report_map.html:413
 #: tigamap/templates/tigamap/validated_report_map.html:600
@@ -529,16 +529,12 @@ msgstr "Classificació feta per científics (si hi ha foto)"
 #: tigamap/templates/tigamap/validated_report_map.html:600
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:909
 msgid "crowd_row_help"
-msgstr ""
-"Avaluació per voluntaris a <a href=\"http://crowdcrafting.org/app/Tigafotos/"
-"\" target=\"_blank\">Crowdcrafting</a> (si hi ha foto)"
+msgstr "Avaluació per voluntaris a <a href=\"http://crowdcrafting.org/app/Tigafotos/\" target=\"_blank\">Crowdcrafting</a> (si hi ha foto)"
 
 #: tigamap/templates/tigamap/validated_report_map.html:605
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:914
 msgid "report_row_title"
-msgstr ""
-"<a href=\"http://atrapaeltigre.com/web/ca/el-mosquit-tigre/\" target=\"_blank"
-"\">Tigre principis</a>"
+msgstr "<a href=\"http://atrapaeltigre.com/web/ca/el-mosquit-tigre/\" target=\"_blank\">Tigre principis</a>"
 
 #: tigamap/templates/tigamap/validated_report_map.html:605
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:914
@@ -567,111 +563,107 @@ msgstr "Afegides per experts o participants (optatiu)"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:646
 msgid "fmap_All_years"
-msgstr ""
+msgstr "Tots els anys"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:657
 msgid "fmap_All_months"
-msgstr ""
+msgstr "Tots els mesos"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:658
 msgid "January"
-msgstr ""
+msgstr "gener"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:660
 msgid "February"
-msgstr ""
+msgstr "febrer"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:662
 msgid "March"
-msgstr ""
+msgstr "març"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:663
 msgid "April"
-msgstr ""
+msgstr "abril"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:664
 msgid "May"
-msgstr ""
+msgstr "maig"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:665
 msgid "June"
-msgstr ""
+msgstr "juny"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:666
 msgid "July"
-msgstr ""
+msgstr "juliol"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:667
 msgid "August"
-msgstr ""
+msgstr "agost"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:668
 msgid "September"
-msgstr ""
+msgstr "setembre"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:670
 msgid "October"
-msgstr ""
+msgstr "octubre"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:672
 msgid "November"
-msgstr ""
+msgstr "novembre"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:674
 msgid "December"
-msgstr ""
+msgstr "desembre"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:685
-#, fuzzy
 msgid "fmap_Adult_tiger_mosquitoes"
-msgstr "Informes de mosquits"
+msgstr "Adults"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:685
 msgid "fmap_Adults"
-msgstr ""
+msgstr "Mosquits tigre"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:686
 msgid "fmap_Tiger_mosquito_breeding_sites"
-msgstr ""
+msgstr "Llocs de cria de mosquit tigre"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:686
-#, fuzzy
 msgid "fmap_Breeding_sites"
-msgstr "Llocs de cria: Altres"
+msgstr "Llocs de cria"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:689
 msgid "fmap_Tigatrapp_coverage"
-msgstr ""
+msgstr "Zones explorades"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:689
-#, fuzzy
 msgid "fmap_Coverage"
 msgstr "Zones explorades"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:698
 msgid "fmap_Only_highly_probable_reports"
-msgstr ""
+msgstr "Només probabilitat alta"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:698
 msgid "fmap_Strong_Validation"
-msgstr ""
+msgstr "Alta"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:701
 msgid "fmap_Only_probable_and_highly_probable_reports"
-msgstr ""
+msgstr "Només probabilitat mitjana i alta"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:701
 msgid "fmap_Medium_Validation"
-msgstr ""
+msgstr "Mitjana"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:703
 msgid "fmap_No_validation_filter"
-msgstr ""
+msgstr "Sense filtre"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:703
-#, fuzzy
 msgid "fmap_All_Reports"
-msgstr "Tots"
+msgstr "Tots els informes"
 
 #: tigaserver_app/models.py:299
 msgid "High"
