--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: Tigatrapp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-06-30 16:14+0200\n"
-"PO-Revision-Date: 2015-01-12 15:46+0000\n"
-"Last-Translator: John Palmer\n"
+"PO-Revision-Date: 2015-07-02 00:06+0100\n"
+"Last-Translator: John Palmer <johnrbpalmer@gmail.com>\n"
 "Language-Team: John Palmer\n"
 "Language: English (USA)\n"
 "MIME-Version: 1.0\n"
@@ -39,64 +39,61 @@ msgstr "Breeding site reports"
 
 #: stats/templates/stats/fix_user_chart.html:99
 msgid "Participants with over 20 fixes"
-msgstr ""
+msgstr "Participants with over 20 fixes"
 
 #: stats/templates/stats/fix_user_chart.html:108
 msgid "Participants with over 15 fixes"
-msgstr ""
+msgstr "Participants with over 15 fixes"
 
 #: stats/templates/stats/fix_user_chart.html:117
 msgid "Participants with over 10 fixes"
-msgstr ""
+msgstr "Participants with over 10 fixes"
 
 #: stats/templates/stats/fix_user_chart.html:126
 msgid "Participants with over 5 fixes"
-msgstr ""
+msgstr "Participants with over 5 fixes"
 
 #: stats/templates/stats/fix_user_chart.html:135
 msgid "Participants with at least 1 fix"
-msgstr ""
+msgstr "Participants with at least 1 fix"
 
 #: stats/templates/stats/report_user_chart.html:99
 msgid "Participants with at least 1 report"
-msgstr ""
+msgstr "Participants with at least 1 report"
 
 #: stats/templates/stats/report_user_chart.html:108
 msgid "Participants with over 1 reports"
-msgstr ""
+msgstr "Participants with over 1 reports"
 
 #: stats/templates/stats/report_user_chart.html:117
 msgid "Participants with over 2 reports"
-msgstr ""
+msgstr "Participants with over 2 reports"
 
 #: stats/templates/stats/report_user_chart.html:126
 msgid "Participants with over 3 reports"
-msgstr ""
+msgstr "Participants with over 3 reports"
 
 #: stats/templates/stats/report_user_chart.html:135
 msgid "Participants with over 4 reports"
-msgstr ""
+msgstr "Participants with over 4 reports"
 
 #: templates/admin/base_site.html:4
-#, fuzzy
 msgid "Tigaserver admin"
 msgstr "Tigaserver admin"
 
 #: templates/admin/base_site.html:7
-#, fuzzy
 msgid "Tigaserver administration"
 msgstr "Tigaserver administration"
 
 #: tigacrafting/templates/tigacrafting/expert_report_annotation.html:92
 #: tigacrafting/templates/tigacrafting/expert_validation.html:88
 #: tigacrafting/templates/tigacrafting/movelab_validation.html:88
-#, fuzzy
 msgid "Toggle navigation"
 msgstr "Toggle navigation"
 
 #: tigacrafting/templates/tigacrafting/expert_report_annotation.html:156
 msgid "Reports per page"
-msgstr ""
+msgstr "Reports per page"
 
 #: tigacrafting/templates/tigacrafting/expert_report_annotation.html:386
 #: tigacrafting/templates/tigacrafting/expert_report_annotation.html:401
@@ -109,32 +106,32 @@ msgstr ""
 #: tigacrafting/templates/tigacrafting/superexpert_report_annotation.html:108
 #: tigacrafting/templates/tigacrafting/superexpert_report_annotation.html:121
 msgid "All"
-msgstr ""
+msgstr "All"
 
 #: tigacrafting/templates/tigacrafting/expert_validation.html:98
 msgid "Menu"
-msgstr ""
+msgstr "Menu"
 
 #: tigacrafting/templates/tigacrafting/expert_validation.html:101
 msgid "New batch"
-msgstr ""
+msgstr "New batch"
 
 #: tigacrafting/templates/tigacrafting/expert_validation.html:102
 msgid "Photos you have taken notes on but not yet scored"
-msgstr ""
+msgstr "Photos you have taken notes on but not yet scored"
 
 #: tigacrafting/templates/tigacrafting/expert_validation.html:103
 msgid "Photos you have already scored"
-msgstr ""
+msgstr "Photos you have already scored"
 
 #: tigacrafting/templates/tigacrafting/expert_validation.html:171
 #: tigacrafting/templates/tigacrafting/movelab_validation.html:195
 msgid "Save"
-msgstr ""
+msgstr "Save"
 
 #: tigacrafting/templates/tigacrafting/movelab_validation.html:103
 msgid "Photos per page"
-msgstr ""
+msgstr "Photos per page"
 
 #: tigahelp/templates/tigahelp/policies.html:30
 #: tigahelp/templates/tigahelp/policies_en.html:29
@@ -154,18 +151,18 @@ msgstr "User Agreement"
 msgid "privacy-policy"
 msgstr "Privacy Policy"
 
-#: tigamap/views.py:145 tigamap/views.py:316
+#: tigamap/views.py:145
+#: tigamap/views.py:316
 msgid "coverage-map"
 msgstr "Coverage Map"
 
 #: tigamap/views.py:153
 msgid "Pseudo Occurrence-Exposure Map"
-msgstr ""
+msgstr "Pseudo Occurrence-Exposure Map"
 
 #: tigamap/views.py:160
-#, fuzzy
 msgid "Adult tiger mosquitoes: Validated reports"
-msgstr "Mosquitoes: Validated reports"
+msgstr "Adult tiger mosquitoes: Validated reports"
 
 #: tigamap/views.py:169
 msgid "adult-tiger-mosquitoes-medium-and-high-probability-reports"
@@ -175,46 +172,56 @@ msgstr "Adult tiger mosquitoes: Medium and high probability reports"
 msgid "adult-tiger-mosquitoes-high-probability-reports"
 msgstr "Adult tiger mosquitoes: High probability reports"
 
-#: tigamap/views.py:181 tigamap/views.py:212 tigamap/views.py:258
+#: tigamap/views.py:181
+#: tigamap/views.py:212
+#: tigamap/views.py:258
 msgid "adult-tiger-mosquitoes-all-reports"
 msgstr "Mosquitoes: All reports"
 
 #: tigamap/views.py:187
-#, fuzzy
 msgid "Breeding Sites: Validated reports"
-msgstr "Breeding sites: All reports"
+msgstr "Breeding Sites: Validated reports"
 
-#: tigamap/views.py:197 tigamap/views.py:285
+#: tigamap/views.py:197
+#: tigamap/views.py:285
 msgid "breeding-sites-storm-drains-and-fountains"
 msgstr "Breeding sites: Storm drains and fountains"
 
-#: tigamap/views.py:200 tigamap/views.py:285
+#: tigamap/views.py:200
+#: tigamap/views.py:285
 msgid "breeding-sites-basins"
 msgstr "Breeding sites: Basins"
 
-#: tigamap/views.py:203 tigamap/views.py:285
+#: tigamap/views.py:203
+#: tigamap/views.py:285
 msgid "breeding-sites-buckets-and-wells"
 msgstr "Breeding sites: Buckets and wells"
 
-#: tigamap/views.py:206 tigamap/views.py:285
+#: tigamap/views.py:206
+#: tigamap/views.py:285
 msgid "breeding-sites-other"
 msgstr "Breeding sites: Other"
 
-#: tigamap/views.py:209 tigamap/views.py:285 tigamap/views.py:289
+#: tigamap/views.py:209
+#: tigamap/views.py:285
+#: tigamap/views.py:289
 msgid "breeding-sites-all-reports"
 msgstr "Breeding sites: All repors"
 
-#: tigamap/views.py:254 tigamap/views.py:256
+#: tigamap/views.py:254
+#: tigamap/views.py:256
 #: tigamap/templates/tigamap/app.html:122
 #: tigamap/templates/tigamap/app_new.html:171
 msgid "adult-tiger-mosquitoes"
 msgstr "Mosquito reports"
 
-#: tigamap/views.py:254 tigamap/templates/tigamap/app_new.html:177
+#: tigamap/views.py:254
+#: tigamap/templates/tigamap/app_new.html:177
 msgid "menu_adults_prob"
 msgstr "Possible and confirmed tiger mosquitoes"
 
-#: tigamap/views.py:256 tigamap/templates/tigamap/app_new.html:179
+#: tigamap/views.py:256
+#: tigamap/templates/tigamap/app_new.html:179
 msgid "menu_adults_definite"
 msgstr "Confirmed tiger mosquitoes"
 
@@ -223,9 +230,7 @@ msgstr "Confirmed tiger mosquitoes"
 #: tigamap/templates/tigamap/app_new.html:85
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:167
 msgid "our-website-uses-cookies"
-msgstr ""
-"Our website uses cookies. By continuing we assume your permission to deploy "
-"cookies. For more information on our site policies, please see our"
+msgstr "Our website uses cookies. By continuing we assume your permission to deploy cookies. For more information on our site policies, please see our"
 
 #: tigamap/templates/tigamap/app.html:27
 #: tigamap/templates/tigamap/app_filtered.html:102
@@ -308,18 +313,16 @@ msgid "map_help_url_new"
 msgstr "http://atrapaeltigre.com/web/en/citizen-scientist-map/"
 
 #: tigamap/templates/tigamap/coverage_map_beta.html:79
-#, fuzzy
 msgid "low"
-msgstr "Low"
+msgstr "low"
 
 #: tigamap/templates/tigamap/coverage_map_beta.html:79
-#, fuzzy
 msgid "medium"
-msgstr "Medium"
+msgstr "medium"
 
 #: tigamap/templates/tigamap/coverage_map_beta.html:79
 msgid "high"
-msgstr ""
+msgstr "high"
 
 #: tigamap/templates/tigamap/coverage_map_new.html:221
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:411
@@ -344,13 +347,7 @@ msgstr "Coverage Information"
 #: tigamap/templates/tigamap/coverage_map_new.html:373
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:812
 msgid "coverage_legend_info_blurb"
-msgstr ""
-"<p>The Android version of Tigatrapp includes optional background location "
-"tracking. The app records users' locations at 5 random times each day. It "
-"records only the approximate position (red squares on the map) in order to "
-"maintain user anonymity.<br /><br />The number of observations in a given "
-"square is the accumulated number of positions recorded in that square for "
-"all participants. The darker it is, the more an area has been explored.</p>"
+msgstr "<p>The Android version of Tigatrapp includes optional background location tracking. The app records users' locations at 5 random times each day. It records only the approximate position (red squares on the map) in order to maintain user anonymity.<br /><br />The number of observations in a given square is the accumulated number of positions recorded in that square for all participants. The darker it is, the more an area has been explored.</p>"
 
 #: tigamap/templates/tigamap/coverage_map_new.html:377
 #: tigamap/templates/tigamap/validated_report_map.html:629
@@ -476,9 +473,7 @@ msgstr "Unknown"
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:336
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:904
 msgid "expert_row_title"
-msgstr ""
-"<a href=\"http://atrapaeltigre.com/web/en/citizen-scientist-map/\" target="
-"\"_blank\">Experts</a>"
+msgstr "<a href=\"http://atrapaeltigre.com/web/en/citizen-scientist-map/\" target=\"_blank\">Experts</a>"
 
 #: tigamap/templates/tigamap/validated_report_map.html:413
 #: tigamap/templates/tigamap/validated_report_map.html:600
@@ -525,16 +520,12 @@ msgstr "Assessment by scientists (if photo available)"
 #: tigamap/templates/tigamap/validated_report_map.html:600
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:909
 msgid "crowd_row_help"
-msgstr ""
-"Assessments at <a href='http://crowdcrafting.org/app/Tigafotos/' "
-"target='_blank'>crowdcrafting</a> from volunteers (if photo available)"
+msgstr "Assessments at <a href='http://crowdcrafting.org/app/Tigafotos/' target='_blank'>crowdcrafting</a> from volunteers (if photo available)"
 
 #: tigamap/templates/tigamap/validated_report_map.html:605
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:914
 msgid "report_row_title"
-msgstr ""
-"<a href=\"http://atrapaeltigre.com/web/en/asian-tiger-mosquito/\" target="
-"\"_blank\">Tiger principles</a>"
+msgstr "<a href=\"http://atrapaeltigre.com/web/en/asian-tiger-mosquito/\" target=\"_blank\">Tiger principles</a>"
 
 #: tigamap/templates/tigamap/validated_report_map.html:605
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:914
@@ -563,111 +554,107 @@ msgstr "From experts or observers (optional)"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:646
 msgid "fmap_All_years"
-msgstr ""
+msgstr "All years"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:657
 msgid "fmap_All_months"
-msgstr ""
+msgstr "All months"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:658
 msgid "January"
-msgstr ""
+msgstr "January"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:660
 msgid "February"
-msgstr ""
+msgstr "February"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:662
 msgid "March"
-msgstr ""
+msgstr "March"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:663
 msgid "April"
-msgstr ""
+msgstr "April"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:664
 msgid "May"
-msgstr ""
+msgstr "May"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:665
 msgid "June"
-msgstr ""
+msgstr "June"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:666
 msgid "July"
-msgstr ""
+msgstr "July"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:667
 msgid "August"
-msgstr ""
+msgstr "August"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:668
 msgid "September"
-msgstr ""
+msgstr "September"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:670
 msgid "October"
-msgstr ""
+msgstr "October"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:672
 msgid "November"
-msgstr ""
+msgstr "November"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:674
 msgid "December"
-msgstr ""
+msgstr "December"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:685
-#, fuzzy
 msgid "fmap_Adult_tiger_mosquitoes"
-msgstr "Mosquito reports"
+msgstr "Adult tiger mosquitoes"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:685
 msgid "fmap_Adults"
-msgstr ""
+msgstr "Adults"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:686
 msgid "fmap_Tiger_mosquito_breeding_sites"
-msgstr ""
+msgstr "Tiger mosquito breeding sites"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:686
-#, fuzzy
 msgid "fmap_Breeding_sites"
-msgstr "Breeding sites: Other"
+msgstr "Breeding sites"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:689
 msgid "fmap_Tigatrapp_coverage"
-msgstr ""
+msgstr "Tigatrapp coverage"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:689
-#, fuzzy
 msgid "fmap_Coverage"
 msgstr "Coverage"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:698
 msgid "fmap_Only_highly_probable_reports"
-msgstr ""
+msgstr "Only highly  probable  reports"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:698
 msgid "fmap_Strong_Validation"
-msgstr ""
+msgstr "Strong Validation"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:701
 msgid "fmap_Only_probable_and_highly_probable_reports"
-msgstr ""
+msgstr "Only  probable  and highly probable reports"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:701
 msgid "fmap_Medium_Validation"
-msgstr ""
+msgstr "Medium Validation"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:703
 msgid "fmap_No_validation_filter"
-msgstr ""
+msgstr "No validation  filter"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:703
-#, fuzzy
 msgid "fmap_All_Reports"
-msgstr "All reports"
+msgstr "All Reports"
 
 #: tigaserver_app/models.py:299
 msgid "High"
