--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Tigatrapp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-07-03 01:05+0200\n"
-"PO-Revision-Date: 2015-07-03 11:28+0100\n"
+"PO-Revision-Date: 2015-07-03 15:43+0100\n"
 "Last-Translator: John Palmer <johnrbpalmer@gmail.com>\n"
 "Language-Team: John Palmer\n"
 "Language: Spanish\n"
@@ -696,11 +696,11 @@ msgstr "Zonas exploradas"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:739
 msgid "validation_button_text_high"
-msgstr "Informes de alta fiabilidad"
+msgstr "Informes de fiabilidad alta"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:742
 msgid "validation_button_text_medium"
-msgstr "Informes de media fiabilidad"
+msgstr "Informes de fiabilidad media"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:744
 msgid "validation_button_text_all"
