--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -431,14 +431,14 @@ msgstr "no"
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:429
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:978
 msgid "expert_cat_tiger"
-msgstr "Mosquito tigre"
+msgstr "Confirmado"
 
 #: tigamap/templates/tigamap/validated_report_map.html:400
 #: tigamap/templates/tigamap/validated_report_map.html:552
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:429
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:986
 msgid "expert_cat_possible_tiger"
-msgstr " Posible mosquito tigre"
+msgstr "Posible"
 
 #: tigamap/templates/tigamap/validated_report_map.html:400
 #: tigamap/templates/tigamap/validated_report_map.html:570
@@ -501,7 +501,7 @@ msgstr "¿Rayas blancas en abdomen y patas?"
 #: tigamap/templates/tigamap/validated_report_map.html:535
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:969
 msgid "adult_report_legend_main_title"
-msgstr "Marcadores"
+msgstr "Ae. albopictus/aegypti"
 
 #: tigamap/templates/tigamap/validated_report_map.html:588
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:1032
@@ -519,7 +519,7 @@ msgstr "Clasificación hecha por científicos con las fotos disponibles"
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:1044
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:1175
 msgid "crowd_row_help"
-msgstr "Clasificación hecha por voluntarios en <a href=\"http://crowdcrafting.org/app/Tigafotos/\" target=\"_blank\">Tigafotos</a>  (si hay fotos)"
+msgstr "Clasificación hecha por voluntarios en <a href=\"http://crowdcrafting.org/app/Tigafotos/\" target=\"_blank\">Crowdcrafting</a>  (si hay fotos)"
 
 #: tigamap/templates/tigamap/validated_report_map.html:605
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:1049
@@ -560,12 +560,12 @@ msgstr "Escritas por expertos o participantes (optativo)"
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:152
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:822
 msgid "validation_button_subtext_adults_high"
-msgstr "Mosquitos tigre confirmados"
+msgstr "Ae. albopictus/aegypti confirmados"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:153
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:825
 msgid "validation_button_subtext_adults_medium"
-msgstr "Mosquitos tigre posibles y confirmados"
+msgstr "Ae. albopictus/aegypti posibles y confirmados"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:154
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:828
@@ -673,15 +673,15 @@ msgstr "diciembre"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:807
 msgid "fmap_Adult_tiger_mosquitoes"
-msgstr "Adultos"
+msgstr "Adultos Ae. albopictus/aegypti"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:807
 msgid "fmap_Adults"
-msgstr "Mosquitos tigre"
+msgstr "Adultos"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:809
 msgid "fmap_Tiger_mosquito_breeding_sites"
-msgstr "Lugares de cría de mosquito tigre"
+msgstr "Lugares de cría de Ae. albopictus/aegypti"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:809
 msgid "fmap_Breeding_sites"
