--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -525,7 +525,7 @@ msgstr "Clasificación hecha por voluntarios en <a href=\"http://crowdcrafting.o
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:1049
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:1180
 msgid "report_row_title"
-msgstr "<a href=\"http://atrapaeltigre.com/participa/tigatrapp/\" target=\"_blank\">Respuestas</a> cuestionario Tigatrapp"
+msgstr "<a href=\"http://atrapaeltigre.com/participa/tigatrapp/\" target=\"_blank\">Descripción</a> taxonómica"
 
 #: tigamap/templates/tigamap/validated_report_map.html:605
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:1049
@@ -689,7 +689,7 @@ msgstr "Lugares de cría"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:812
 msgid "fmap_Tigatrapp_coverage"
-msgstr "Zonas exploradas"
+msgstr "Esfuerzo de muestreo"
 
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:812
 msgid "fmap_Coverage"
