--- a/locale/ca/LC_MESSAGES/django.po
+++ b/locale/ca/LC_MESSAGES/django.po
@@ -418,7 +418,7 @@ msgstr "No se sap"
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:1159
 msgid "expert_row_title"
 msgstr ""
-"<a href=\"http://atrapaeltigre.com/web/ca/el-mapa-del-mosquit-tigre-2014/\" "
+"<a href=\"http://www.mosquitoalert.com/ca/mapa-i-resultats/mapa/\" "
 "target=\"_blank\">Resultat</a> validació experta"
 
 #: tigamap/templates/tigamap/validated_report_map.html:413
@@ -479,8 +479,7 @@ msgstr ""
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:1169
 msgid "report_row_title"
 msgstr ""
-"<a href=\"http://atrapaeltigre.com/participa/tigatrapp/\" target=\"_blank"
-"\">Descripció </a>taxonòmica"
+"Descripció taxonòmica <a href=\"http://www.mosquitoalert.com/ca/mosquits/mosquit-tigre-ae-albopictus/\" target=\"_blank\">Ae. albopictus</a> i <a href=\"http://www.mosquitoalert.com/ca/mosquits/mosquit-de-la-febre-groga/\" target=\"_blank\">Ae. aegypti</a>"
 
 #: tigamap/templates/tigamap/validated_report_map.html:605
 #: tigamap/templates/tigamap/validated_report_map_filterable.html:1039
