--- a/locale/ca/LC_MESSAGES/django.po
+++ b/locale/ca/LC_MESSAGES/django.po
@@ -982,15 +982,15 @@ msgstr "Tres dies seguits enviant informes"
 
 #: tigascoring/xp_scoring.py:221
 msgid "achievement_10_reports"
-msgstr "10 informes"
+msgstr "10 informes pujats"
 
 #: tigascoring/xp_scoring.py:222
 msgid "achievement_20_reports"
-msgstr "20 informes"
+msgstr "20 informes pujats"
 
 #: tigascoring/xp_scoring.py:223
 msgid "achievement_50_reports"
-msgstr "50 informes"
+msgstr "50 informes pujats"
 
 #: tigascoring/xp_scoring.py:259 tigascoring/xp_scoring.py:302
 msgid "picture"
